kubernetes/apps/default/faster-whisper/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: faster-whisper
  namespace: default
  labels:
    app: faster-whisper
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: faster-whisper
