kubernetes/apps/default/faster-whisper/app/virtualservice.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: faster-whisper
  namespace: default
spec:
  hosts:
    - faster-whisper.${SECRET_DOMAIN}
  gateways:
    - istio-ingress/external-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: faster-whisper.default.svc.cluster.local
            port:
              number: 8000
